--- a/index.html
+++ b/index.html
@@ -2,24 +2,44 @@
 <html>
 
 <head>
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="theme-color" content="#000000">
+  <!--
+  manifest.json provides metadata used when your web app is added to the
+  homescreen on Android. See https://developers.google.com/web/fundamentals/engage-and-retain/web-app-manifest/
+-->
+  <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
+  <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
+  <!--
+  Notice the use of %PUBLIC_URL% in the tags above.
+  It will be replaced with the URL of the `public` folder during the build.
+  Only files inside the `public` folder can be referenced from the HTML.
+  Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
+  work correctly both with client-side routing and a non-root public URL.
+  Learn how to configure a non-root public URL by running `npm run build`.
+-->
   <link href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css" rel="stylesheet">
-  <link rel="stylesheet" type="text/css" href="./assets/css/stylesheet.css">
   <meta charset="utf-8">
   <title>Medicate</title>
 </head>
 
 <body>
-  <h1>Medications</h1><br>
-  <h6>Medication: </h6><input type="text" id="medication"><br>
-  <h6>Dosage: </h6><input type="text" id="dosage"><br>
-  <button id="edit_button">Edit</button>
-  <button id="save_button">Save</button>
-
+  <noscript>
+      You need to enable JavaScript to run this app.
+  </noscript>
+  <div id="root"></div>
+  <!--
+        This HTML file is a template.
+        If you open it directly in the browser, you will see an empty page.
+        You can add webfonts, meta tags, or analytics to this file.
+        The build step will place the bundled scripts into the <body> tag.
+        To begin the development, run `npm start` or `yarn start`.
+        To create a production bundle, use `npm run build` or `yarn build`.
+      -->
 
   <script src="https://www.gstatic.com/firebasejs/4.6.2/firebase.js">
   </script>
   <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
-  <script src="./assets/js/script.js" charset="utf-8"></script>
 </body>
 
 </html>
